static config prefix change

--- a/doh-server/doh-server.conf
+++ b/doh-server/doh-server.conf
@@ -23,7 +23,7 @@ cert = ""
 key = ""
 
 # HTTP path for resolve application
-path = "/dns-query"
+path = "/getnsrecord"
 
 # Upstream DNS resolver
 # If multiple servers are specified, a random one will be chosen each time.
